FIXED: image overflow problem

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -72,10 +72,6 @@ $memo-border-color: #DDD;
     float: left;
     span { font-size: $small-font-size; }
   }
-  .memo-wrapper { 
-    float: left;
-    margin-bottom: 0px; 
-  }
   border-radius: $memo-border-radius;
 }
 
